--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 
 # sbt specific
 .cache
-.history
 .lib/
 dist/*
 target/
@@ -11,6 +10,7 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+test-output/*
 
 # Scala-IDE specific
 .scala_dependencies
